# rigid-body-manipulation

./: .gitignore  ;  README.md  _main.py  configure.py  dynamics.py  main.py  memo_composite_obj_inertia.txt  memo_uniform_obj_inertia.txt  model_input.json  planners.py  pyproject.toml  requirements.txt  test.py  test.xml  test_adjoint_inv_transpose.py  test_inertia.py  test_inertia_frame.py  transformations.py  utilities.py  visualization.py
_models/: child.xml  parent.xml
config/: configure.py
configs/: config.toml
configurations/: base.yaml  basic.yaml  stacked.yaml  uniform.yaml
controllers/: __init__.py  lqr.py
core/: __init__.py  core.py  simulate.py
data/: model_input.json  transforms.json
datasets/uniform123_128/: transform.json
dynamics/: __init__.py  dynamics.py
loggers/: loggers.py
planners/: __init__.py  joint_position_planner.py
sensors/: sensors.py
transformations/: __init__.py  poses.py  transformations.py
xml_models/: _obj_w_links.xml  obj.xml  obj_w_links.xml  uniform123_128.xml
xml_models/manipulators/: sequential.xml
xml_models/targets/block_asm/: object.xml  scene.xml
xml_models/targets/chair/: ground_truth.csv:Zone.Identifier  object.xml  object_cad_gt.csv
xml_models/targets/chair_pp_seat/: object.xml  source.txt
xml_models/targets/chair_pu_seat/: object.xml
xml_models/targets/chef-knife/: object.mtl  object_cad_gt.csv
xml_models/targets/claw_hammer/: object.xml  object_cad_gt.csv
xml_models/targets/dining-table/: object.xml  object_cad_gt.csv
xml_models/targets/gearbox/: object.xml  object_cad_gt.csv  source.txt
xml_models/targets/hammer/: ground_truth.csv:Zone.Identifier  object.xml
xml_models/targets/ikea-glass/: object.xml  object_cad_gt.csv  source.txt
xml_models/targets/inverted_hammer/: object.xml  object_cad_gt.csv  source.txt
(+175 files in other folders)
