[project]
name = "rigid-body-manipulation"
version = "0.1"
requires-python = ">= 3.9"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "mujoco",
    "dm_control",
    "tqdm",
    "omegaconf",
    "transforms3d",
    "liegroups @ git+https://github.com/utiasSTARS/liegroups.git@refs/pull/10/head",
    "tyro",
    "ruff",
    "opencv-python",
    "PyYAML",
]

[tool.ruff]
line-length = 119  # maximum line length

[tool.ruff.lint]
select = [ # 有効にするルール
    "E",    # pycodestyle のエラー
    "W",    # pycodestyle の警告
    "F",    # pyflakes のエラー
    "I",    # isort のエラー
    "C",    # mccabe の複雑性
    "B",    # flake8-bugbear のバグ
    "UP",   # pyupgrade
    "Q",    # ruff特有のルール
]
exclude = [ # 除外するファイル/ディレクトリ
    ".venv",
]
fixable = ["ALL"]